--- a/JavaScript/Album1v1/index.html
+++ b/JavaScript/Album1v1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,29 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
 
+<body>
+    <h1 class="toptext">Your last.fm username:</h1>
+    <form onsubmit="return false">
+        <input type="text" id="namefield">
+        <input type="submit" value="submit" id="submitButton">
+    </form>
     <div id="main-container">
-        <div id="album-list-container">
+        <div id="matchup-container">
+            <h1 id="round"></h1>
+            <div class="album-container">
+                <img id="album1-image">
+                <h2 id="album1"></h2>
+            </div>
+            <div class="album-container">
+                <img id="album2-image">
+                <h2 id="album2"></h2>
+            </div>
+            <p id="winner"></p>
         </div>
     </div>
 
-<script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
+
 </html>
