--- a/JavaScript/Album1v1/track.html
+++ b/JavaScript/Album1v1/track.html
@@ -13,9 +13,9 @@
     <div id="top">
         <h1>Music 1v1 tournament</h1>
         <div id="buttons">
-            <h2 class="button" style="font-weight:bolder;"><a style="color:#b90000;" href="./index.html">Albums</a></h2>
-            <h2 class="button"><a href="./artist.html">Artists</a></h2>
-            <h2 class="button"><a href="./track.html">Tracks</a></h2>
+            <h2 class="button underline"><a href="./index.html">Albums</a></h2>
+            <h2 class="button underline"><a href="./artist.html">Artists</a></h2>
+            <h2 class="button" style="font-weight:bolder;"><a style="color:#b90000;" href="./track.html">Tracks</a></h2>
         </div>
     </div>
     <h1 class="toptext">Your last.fm username:</h1>
@@ -26,19 +26,19 @@
     <div id="main-container">
         <div id="matchup-container">
             <p id="round"></p>
-            <div class="album-container">
-                <img id="album1-image">
-                <h2 id="album1"></h2>
+            <div class="track-container">
+                <img id="track1-image">
+                <h2 id="track1"></h2>
             </div>
-            <div class="album-container">
-                <img id="album2-image">
-                <h2 id="album2"></h2>
+            <div class="track-container">
+                <img id="track2-image">
+                <h2 id="track2"></h2>
             </div>
             <p id="winner"></p>
         </div>
     </div>
 
-    <script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="./track.js"></script>
 </body>
 
 </html>
